--- a/cuisine-app/package.json
+++ b/cuisine-app/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.6.8",
@@ -31,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-popper": "^2.3.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.0",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
