--- a/cuisines-api/package.json
+++ b/cuisines-api/package.json
@@ -32,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/otp-generator": "^4.0.2",
+    "axios": "^1.8.4",
     "cache-manager": "^6.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
