chore: added documentation on readme.md

--- a/cuisines-api/package.json
+++ b/cuisines-api/package.json
@@ -2,7 +2,7 @@
   "name": "cuisines-api",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Ayomitide OAJ",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
